[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2,<3" ]

[project]
name = "click-through-learn"
version = "0.1.0"

description = "Analysis of ML and DL methods for CTR prediction"
readme = "README.md"
license = { text = "MIT License" }
authors = [
  { name = "Alexander Ivanov", email = "alexander.ivanov.289@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "catboost>=1.2.8,<2",
  "faker>=37.6,<38",
  "lightgbm>=4.6,<5",
  "loguru>=0.7.3,<0.8",
  "matplotlib>=3.10.6,<4",
  "mlflow>=3.3.2,<4",
  "numpy>=2.3.2,<3",
  "optuna>=4.5,<5",
  "pandas>=2.3.2,<3",
  "plotly>=6.3,<7",
  "polars>=1.33,<2",
  "scikit-learn>=1.7.1,<2",
  "tensorflow>=2.20,<3",
  "torch>=2.8,<3",
  "xgboost>=3.0.4,<4",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.6"
mypy = "^1.17.1"
pre-commit = "^4.3.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-xdist = "^3.8.0"
ruff = "^0.12.11"
