[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2,<3" ]

[project]
name = "click-through-learn"
version = "0.1.0"

description = "Analysis of ML and DL methods for CTR prediction"
readme = "README.md"
license = { text = "MIT License" }
authors = [
  { name = "Alexander Ivanov", email = "alexander.ivanov.289@gmail.com" },
]
requires-python = ">=3.12"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "catboost>=1.2.8,<2",
  "category-encoders>=2.8.1,<3",
  "deepctr-torch>=0.2.9,<0.3",
  "faker>=37.6,<38",
  "lightgbm>=4.6,<5",
  "loguru>=0.7.3,<0.8",
  "matplotlib>=3.10.6,<4",
  "mlflow>=3.3.2,<4",
  "numpy>=2.3.2,<3",
  "optuna>=4.5,<5",
  "pandas>=2.3.2,<3",
  "plotly>=6.3,<7",
  "polars>=1.33,<2",
  "scikit-learn>=1.7.1,<2",
  "statsmodels>=0.14.5,<0.15",
  "tensorflow>=2.20,<3",
  "torch>=2.8,<3",
  "xgboost>=3.0.4,<4",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.6"
mypy = "^1.17.1"
pre-commit = "^4.3.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-xdist = "^3.8.0"
ruff = "^0.12.11"

[tool.ruff]
target-version = "py312"

line-length = 120

exclude = [
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  ".venv",
  "build",
  "data",
  "dist",
  "experiments/artifacts",
  "notebooks",
  "reports",
]
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "lf"
format.skip-magic-trailing-comma = false
format.docstring-code-format = true
lint.select = [
  "A",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PT",
  "T20",
  "UP",
]

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 3
profile = "black"

[tool.mypy]
ignore_missing_imports = true
pretty = true
python_version = "3.12"
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

disallow_untyped_calls = false
disallow_untyped_returns = false

files = [
  "src",
  "tests",
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "pandas.*",
  "numpy.*",
  "torch.*",
  "lightgbm.*",
  "xgboost.*",
  "catboost.*",
  "sklearn.*",
  "fastfm2.*",
  "pytorch_widedeep.*",
  "pytorch_tabnet.*",
  "captum.*",
  "mlflow.*",
  "optuna.*",
  "shap.*",
  "netcal.*",
  "duckdb.*",
]
