[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2,<3" ]

[project]
name = "click-through-learn"
version = "0.1.0"

description = "Master Thesis > Analysis of ML methods for CTR prediction"
readme = "README.md"
license = { text = "MIT License" }
authors = [
  { name = "Alexander Ivanov", email = "alexander.ivanov.289@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "catboost>=1.2.8,<2",
  "category-encoders>=2.8.1,<3",
  "deepctr-torch>=0.2.9,<0.3",
  "lightgbm>=4.6,<5",
  "loguru<0.7",
  "numpy<1.27",
  "optuna>=4.5,<5",
  "optuna-integration[xgboost]>=4.5,<5",
  "pandas>=2.3.3,<3",
  "plotly>=6.3.1,<7",
  "polars>=1.35.1,<2",
  "pyarrow>=22,<23",
  "scikit-learn>=1.7.2,<2",
  "xgboost>=3.1.1,<4",
]

[dependency-groups]
dev = [
  "jupyterlab>=4.4.10,<5",
  "mypy>=1.18.2,<2",
  "pre-commit>=4.3,<5",
  "ruff>=0.14.2,<0.15",
]

[tool.poetry]
package-mode = false

[tool.ruff]
target-version = "py310"

line-length = 120
exclude = [
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  ".venv",
  "build",
  "data",
  "dist",
  "experiments/artifacts",
  "notebooks",
  "reports",
]
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "lf"
format.skip-magic-trailing-comma = false
format.docstring-code-format = true
lint.select = [
  "A",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PT",
  "T20",
  "UP",
]

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 3
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_untyped_returns = false
files = [
  "src",
  "tests",
]
ignore_missing_imports = true
pretty = true
python_version = "3.10"
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "pandas.*",
  "numpy.*",
  "torch.*",
  "lightgbm.*",
  "xgboost.*",
  "catboost.*",
  "sklearn.*",
  "fastfm2.*",
  "pytorch_widedeep.*",
  "pytorch_tabnet.*",
  "captum.*",
  "mlflow.*",
  "optuna.*",
  "shap.*",
  "netcal.*",
  "duckdb.*",
]
